# LumenHorizon

./: .dockerignore  .env.example  .gitignore  README.md  compose.yml  justfile
.github/instructions/: lumenhorizon-chunk-workflow.instructions.md
.github/prompts/: lumenhorizon-chunk.prompt.md
.github/workflows/: ci.yml
app/LumenHorizon/AppCore/: Package.swift
app/LumenHorizon/AppCore/Sources/AppCore/: AppConfiguration.swift  AppCoreVersion.swift  MapDefaults.swift
app/LumenHorizon/AppCore/Sources/AppCore/Cache/: ManifestCacheMetadata.swift  TileClassesCacheMetadata.swift
app/LumenHorizon/AppCore/Sources/AppCore/Contracts/: ApiEnvelope.swift  BackendError.swift
app/LumenHorizon/AppCore/Sources/AppCore/Models/: TileClasses.swift  TileManifest.swift  TileSetSummary.swift
app/LumenHorizon/AppCore/Tests/AppCoreTests/: AppConfigurationTests.swift  BackendClientTests.swift  ContractDecodingTests.swift  MapViewModelTests.swift  TileOverlayConfigurationTests.swift
app/LumenHorizon/LumenHorizon/: AppRuntimeConfiguration.swift  ContentView.swift  Info.plist  LumenHorizonApp.swift
app/LumenHorizon/LumenHorizon.xcodeproj/: project.pbxproj
app/LumenHorizon/LumenHorizon.xcodeproj/xcshareddata/xcschemes/: LumenHorizon.xcscheme
app/LumenHorizon/LumenHorizon/Map/: DarkSkyMapView.swift  DarkSkyTileOverlay.swift
app/LumenHorizon/LumenHorizonTests/: DarkSkyTileOverlayTests.swift  LumenHorizonTests.swift
app/LumenHorizon/LumenHorizonUITests/: LumenHorizonUITests.swift  LumenHorizonUITestsLaunchTests.swift
backend/: Cargo.toml  README.md  rust-toolchain.toml
backend/api-gateway/: Cargo.toml  Dockerfile
backend/api-gateway/openapi/: openapi.yaml
backend/api-gateway/src/: auth.rs  commands.rs  config.rs  db.rs  error.rs  main.rs  observability.rs  rate_limit.rs  readiness.rs  server.rs  state.rs  storage.rs  upstream.rs
backend/api-gateway/src/server/: audit.rs  middleware.rs  routes.rs
backend/db-migrate/: Cargo.toml  Dockerfile
backend/db-migrate/migrations/: 001_create_ingest_log.sql  002_add_ingest_log_constraints.sql  003_create_processing_log.sql  004_create_tile_sets.sql  005_ingest_recovery_outbox.sql  006_retention_cleanup.sql  007_tile_set_mosaic_publication.sql
backend/db-migrate/src/: main.rs
backend/ingest-svc/: Cargo.toml  Dockerfile
backend/ingest-svc/src/: cmr.rs  commands.rs  config.rs  db.rs  earthdata.rs  error.rs  jobs.rs  main.rs  models.rs  observability.rs  readiness.rs  server.rs  state.rs
backend/ingest-svc/src/clients/: mod.rs
backend/ingest-svc/src/jobs/: failures.rs  ingest_log.rs  pipeline.rs  recovery.rs  summary.rs  tests.rs  validation.rs
backend/ingest-svc/src/storage/: blob.rs  mod.rs  queue.rs  shared.rs
backend/processing-svc/: Cargo.toml  Dockerfile
backend/processing-svc/src/: commands.rs  config.rs  db.rs  main.rs  manifest.rs  models.rs  mosaic.rs  publish.rs  render.rs  retention.rs  tiles.rs  ui.rs
backend/processing-svc/src/generate/: error.rs  mod.rs  orchestration.rs  planning.rs  rendering.rs  synthetic.rs  types.rs  window.rs
backend/processing-svc/src/hdf_cli/: error.rs  metadata.rs  mod.rs  samples.rs  types.rs
backend/processing-svc/src/process/: dispatch.rs  failure.rs  message.rs  metadata.rs  mod.rs  paths.rs  queue_worker.rs  tests.rs
backend/processing-svc/src/science/: classification.rs  dark_sky.rs  mapping.rs  mod.rs  quality.rs  validation.rs
backend/processing-svc/src/storage/: blob.rs  mod.rs  queue.rs
backend/shared/: Cargo.toml
backend/shared/src/: azure_storage.rs  dark_sky.rs  http_retry.rs  lib.rs  observability.rs  postgres.rs  processing_message.rs  slippy_tiles.rs
docs/: API_GUIDE.md  DEVELOPER_GUIDE.md
plans/: 10-product-and-architecture.md  30-local-development-and-ci.md  50-ingestion-service.md  70-public-api-and-clients.md  overview.md
plans/app/: 00-implementation-roadmap.md  10-product-and-architecture.md  20-engineering-standards.md  30-local-development-and-ci.md  50-map-and-data-experience.md  60-backend-integration.md  overview.md
plans/app/investigation/: map-overlay-flicker.md  map-overlay-misalignment.md  map-tile-decode-errors.md  map-zoom-clamping.md
plans/app/reference/: api-and-data-contracts.md  testing-and-verification.md
plans/app/status/: gap-register.md  index.md
plans/backend/: 00-implementation-roadmap.md  01-professional-grade-checklist.md  20-engineering-standards.md  60-processing-and-tile-generation.md  70-public-api-and-clients.md
plans/backend/future/: README.md  global-overlay-coverage-scaling.md  observing-sites-and-sky-quality.md
plans/backend/investigation/: local-tile-serving.md
plans/backend/reference/: configuration.md  database-schema.md  message-and-api-contracts.md  science-dataset-mapping.md  security-and-identity.md  testing-and-verification.md
plans/backend/runbooks/: postgres-backup-restore.md  queue-backlog-investigation.md  retention-cleanup.md
plans/backend/status/: gap-register.md  index.md
plans/future/: README.md  api-gateway-jwt-validation-libraries.md  observing-sites-and-sky-quality.md
plans/investigation/: latest-mosaic-coverage-remaining-gaps.md  latest-overlay-us-coverage-mosaic.md  map-upsampling-and-us-coverage-gaps.md
plans/reference/: observability-and-operations.md  testing-and-verification.md
plans/runbooks/: postgres-backup-restore.md  queue-backlog-investigation.md  retention-cleanup.md
plans/status/: gap-register.md  index.md
scripts/: dev-api-gateway.sh  dev-down.sh  dev-ingest.sh  dev-migrate.sh  dev-serve.sh  dev-up.sh  lib.sh  setup-local.sh
(+10 files in other folders)
