[workspace]
resolver = "2"
members = [
	"api-gateway",
	"ingest-svc",
	"db-migrate",
	"processing-svc",
	"shared",
]

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22.1"
chrono = "0.4"
hex = "0.4"
hmac = "0.12"
httpdate = "1.0.3"
image = { version = "0.25", default-features = false }
indicatif = "0.17"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false }
serde = "1"
serde_json = "1"
sha2 = "0.10"
shared = { path = "shared" }
sqlx = "0.8"
thiserror = "2"
tokio = "1"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
uuid = "1"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
complexity = "warn"
correctness = "warn"
perf = "warn"
suspicious = "warn"