[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
httpdate = { workspace = true }
jsonwebtoken = "9"
redis = { version = "0.27", default-features = false, features = ["script", "tokio-comp", "tokio-rustls-comp"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "macros"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower = { workspace = true, features = ["timeout", "util"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
serde_yaml = "0.9"
tower = { workspace = true, features = ["util"] }
