[package]
name = "ingest-svc"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
httpdate = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
tower = { workspace = true, features = ["util"] }
