[package]
name = "shared"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
hmac = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }